revenue cat added. apple sign in wip

--- a/content/word-strike/index.html
+++ b/content/word-strike/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Word Patch</title>
+    <title>Daily Reword</title>
     <!-- Capacitor runtime (required for native plugins like App/Haptics) - must load before app bundle -->
     <script src="capacitor.js" data-vite-ignore></script>
     <link rel="stylesheet" href="/index.css">
