--- a/content/word-strike/index.html
+++ b/content/word-strike/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>Daily Reword</title>
     <!-- Capacitor runtime (required for native plugins like App/Haptics) - must load before app bundle -->
     <script src="capacitor.js" data-vite-ignore></script>
