ui ad apple sign

--- a/content/word-strike/index.html
+++ b/content/word-strike/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>Daily Reword</title>
     <!-- Capacitor runtime (required for native plugins like App/Haptics) - must load before app bundle -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&display=swap" rel="stylesheet">
     <script src="capacitor.js" data-vite-ignore></script>
     <link rel="stylesheet" href="/index.css">
 </head>
